--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 #La url del servidor de eureka solo es necesario declara explisitamente cuando este se encuentra corriendo en otra maquina.
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=info
