--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,19 @@ server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #La url del servidor de eureka solo es necesario declara explisitamente cuando este se encuentra corriendo en otra maquina.
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#En el caso que la aplicacion corra con docker, se debe de utilizar la siguiente url (http://192.168.99.100:8761/), el valor 192.168.99.100 puede
+#cambiar de acuerdo a la instalacion/configuraciones en cada maquina, para obtenerlo correr el siguiente comando en docker -> docker-machine ip
+
+eureka.client.service-url.defaultZone=http://192.168.99.100:8761/eureka/
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=false
 
 logging.level.org.hibernate.SQL=info
+
+#Configuracion de Time-Out
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 60000
+#ribbon.ConnectTimeout= 9000
+#ribbon.ReadTimeout= 30000
